apply plugin: 'com.android.application'
android {
    // API Level - See https://apilevels.com/
    // 16=4.1 17=4.2 19=4.4.2
    // 21=5.0.0 22=5.1.1 23=6.0.0 (android M, need permission requests)
    // 24=7.0.0 25=7.1.0 26=8.0.0 29=10.0.0 30=11.0.0 31=12.0.0 33=13.0.0
    // 34=14.0.0 35=15.0.0
    defaultConfig {
        applicationId "com.nltechno.dolidroidpro"
        minSdkVersion 26
        targetSdkVersion 36
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
            lintOptions {
                disable 'MissingTranslation'
            }
            signingConfig signingConfigs.debug
        }
    }

    // Add support for the org.apache.http package
    useLibrary 'org.apache.http.legacy'

    namespace 'com.nltechno.dolidroidpro'
    compileSdk 34
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    // Add entry to be able to use androidx.core.content.FileProvider to use Provider for file upload of camera capture on Android >= 30
    implementation 'androidx.core:core:1.12.0'

    // Add swiper to allow to refresh of a web page with a screen swipe bottom
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"

    // To be able to use CardView so we can add shadow around images
    //implementation "'androidx.cardview:cardview:1.0.0"

    // Add entry to support ContextCompat.checkSelfPermission for API 23+ even when building for target 21
    //compile 'com.android.support:support-v4:23'

    // Dependencies added to use the EncryptedSharedPreferences.
    dependencies {
        // Crypt libraries used to encrypt the secret_shared_prefs file for saved login/pass
        implementation "androidx.security:security-crypto:1.0.0"

        // For Identity Credential APIs
        implementation "androidx.security:security-identity-credential:1.0.0-alpha03"

        // For App Authentication APIs
        implementation "androidx.security:security-app-authenticator:1.0.0-rc01"

        // For App Authentication API testing
        androidTestImplementation "androidx.security:security-app-authenticator:1.0.0-rc01"
    }
}


// This section is to add a report of the use of deprecated methods in IDE after the build
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:deprecation"
}
